unpackaged/main/default/objects/FPC_Equipment__c/FPC_Equipment__c.object-meta.xml
<CustomObject>
    <description>Lessee Equipment to be leased.</description>
    <label>Equipment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Equipment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>