unpackaged/main/default/objects/FPC_Equipment__c/fields/Business_License_Req__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Business License required - status</description>
    <inlineHelpText>Check box if a business license is required.</inlineHelpText>
    <label>Business License Req</label>
    <type>Checkbox</type>
</CustomField>