unpackaged/main/default/objects/FPC_Equipment__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City where equipment will be located.</description>
    <inlineHelpText>Type in the city where the equipment will be located.</inlineHelpText>
    <label>City</label>
    <length>32</length>
    <type>Text</type>
</CustomField>