unpackaged/main/default/objects/FPC_Equipment__c/fields/City_Tax__c.field-meta.xml
<CustomField>
    <fullName>City_Tax__c</fullName>
    <description>City tax where the equipment will be located</description>
    <inlineHelpText>Type in the city tax rate for where the equipment will be located.</inlineHelpText>
    <label>City Tax</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>