unpackaged/main/default/objects/FPC_Equipment__c/fields/County_Tax__c.field-meta.xml
<CustomField>
    <fullName>County_Tax__c</fullName>
    <description>County tax where the equipment will be located</description>
    <inlineHelpText>Type in the county tax rate for where the equipment will be located.</inlineHelpText>
    <label>County Tax</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>