unpackaged/main/default/objects/FPC_Equipment__c/fields/DF_Physical_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>DF_Physical_Zip_Code__c</fullName>
    <formula>Doc_Formulas__r.Physical_Zip__c</formula>
    <label>DF Physical Zip Code</label>
    <type>Text</type>
</CustomField>