unpackaged/main/default/objects/FPC_Equipment__c/fields/DF_Signor_1_Name__c.field-meta.xml
<CustomField>
    <fullName>DF_Signor_1_Name__c</fullName>
    <formula>Doc_Formulas__r.Signor_Contact_ID__r.Full_Name__c</formula>
    <label>DF Signor 1 Name</label>
    <type>Text</type>
</CustomField>