unpackaged/main/default/objects/FPC_Equipment__c/fields/DF_Signor_Title__c.field-meta.xml
<CustomField>
    <fullName>DF_Signor_Title__c</fullName>
    <formula>Doc_Formulas__r.Signor_Contact_ID__r.Title</formula>
    <label>DF Signor Title</label>
    <type>Text</type>
</CustomField>