unpackaged/main/default/objects/FPC_Equipment__c/fields/Equipment_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Address_2__c</fullName>
    <description>Equipment Address Line 2</description>
    <inlineHelpText>Continue typing in the address where the equipment will be located, if necessary.</inlineHelpText>
    <label>Equipment Address 2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>