unpackaged/main/default/objects/FPC_Equipment__c/fields/Equipment_Approval_Req__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Approval_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Equipment approval is required - Status</description>
    <inlineHelpText>Check box if equipment approval is required.</inlineHelpText>
    <label>Equipment Approval Req</label>
    <type>Checkbox</type>
</CustomField>