unpackaged/main/default/objects/FPC_Equipment__c/fields/Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Description__c</fullName>
    <description>Equipment Description</description>
    <inlineHelpText>Type in a description of the equipment.</inlineHelpText>
    <label>Equipment Description</label>
    <length>64</length>
    <type>Text</type>
</CustomField>