unpackaged/main/default/objects/FPC_Equipment__c/fields/Equipment_Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Down_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if the customer made a down payment on the equipment.  It will also a flag for a disclaimer of ownership to be generated.</description>
    <inlineHelpText>This field will indicate if the customer made a down payment on the equipment.  It will also a flag for a disclaimer of ownership to be generated.</inlineHelpText>
    <label>Equipment Down Payment</label>
    <type>Checkbox</type>
</CustomField>