unpackaged/main/default/objects/FPC_Equipment__c/fields/Equipment_Funded__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Funded__c</fullName>
    <description>This field will indicate if an opportunity that contains a piece of equipment has been funded.</description>
    <formula>IF( ISPICKVAL( Opportunity__r.StageName , "Funded") ,1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will indicate if an opportunity that contains a piece of equipment has been funded.</inlineHelpText>
    <label>Equipment Funded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>