unpackaged/main/default/objects/FPC_Equipment__c/fields/Equipment_Funded_Previous_Month__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Funded_Previous_Month__c</fullName>
    <description>This field will indicate if an opportunity containing this piece of equipment was funded in the previous month.</description>
    <formula>IF( 
AND(MONTH(DATEVALUE(Opportunity__r.Fund_Date__c)) = MONTH(TODAY())-1, YEAR(DATEVALUE(Opportunity__r.Fund_Date__c)) = YEAR(TODAY())), 
1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will indicate if an opportunity containing this piece of equipment was funded in the previous month.</inlineHelpText>
    <label>Equipment Funded - Previous Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>