unpackaged/main/default/objects/FPC_Equipment__c/fields/Equipment_Location_Desc__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Location_Desc__c</fullName>
    <description>Description of the equipment location.</description>
    <inlineHelpText>Type in a description of the equipment location.</inlineHelpText>
    <label>Equipment Location Desc</label>
    <length>32</length>
    <type>Text</type>
</CustomField>