unpackaged/main/default/objects/FPC_Equipment__c/fields/Equipment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Notes__c</fullName>
    <description>Notes relating to the equipment or vendor.</description>
    <inlineHelpText>Type notes about the equipment or vendor in this field.</inlineHelpText>
    <label>Equipment Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>