unpackaged/main/default/objects/FPC_Equipment__c/fields/Equipment_Year__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Year__c</fullName>
    <description>Equipment year</description>
    <inlineHelpText>Type in the equipment year.</inlineHelpText>
    <label>Equipment Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>