unpackaged/main/default/objects/FPC_Equipment__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <description>Equipment Grand Total</description>
    <inlineHelpText>Type in the grand total of the equipment.</inlineHelpText>
    <label>Grand Total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>