unpackaged/main/default/objects/FPC_Equipment__c/fields/Grand_Total_F__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_F__c</fullName>
    <formula>IF( Grand_Total__c = 0, Original_Invoice_Amount__c +  Shipping__c + Sales_Tax__c + Other_Charge__c + Total_Tax__c, Grand_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total F</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>