unpackaged/main/default/objects/FPC_Equipment__c/fields/Lease_Number__c.field-meta.xml
<CustomField>
    <fullName>Lease_Number__c</fullName>
    <description>Lease Number</description>
    <inlineHelpText>Type in the lease number associated with the piece of equipment.</inlineHelpText>
    <label>Lease Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>