unpackaged/main/default/objects/FPC_Equipment__c/fields/Lender_Account__c.field-meta.xml
<CustomField>
    <fullName>Lender_Account__c</fullName>
    <description>This field will indicate the lender that is financing the piece of equipment.</description>
    <formula>Opportunity__r.Lender_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will indicate the lender that is financing the piece of equipment.</inlineHelpText>
    <label>Lender Account</label>
    <type>Text</type>
</CustomField>