unpackaged/main/default/objects/FPC_Equipment__c/fields/License_Plate__c.field-meta.xml
<CustomField>
    <fullName>License_Plate__c</fullName>
    <description>This field will hold the value of the license plate.</description>
    <inlineHelpText>Enter the vehicle license plate number.</inlineHelpText>
    <label>License Plate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>