unpackaged/main/default/objects/FPC_Equipment__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>Equipment Make</description>
    <inlineHelpText>Type in the make of the equipment.</inlineHelpText>
    <label>Make</label>
    <length>32</length>
    <type>Text</type>
</CustomField>