unpackaged/main/default/objects/FPC_Equipment__c/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <description>Equipment Model Number</description>
    <inlineHelpText>Type in the equipment's model number.</inlineHelpText>
    <label>Model Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>