unpackaged/main/default/objects/FPC_Equipment__c/fields/New_Used__c.field-meta.xml
<CustomField>
    <fullName>New_Used__c</fullName>
    <description>This field indicates if the equipment is new or used.</description>
    <inlineHelpText>Pick the option that best describes the equipment.</inlineHelpText>
    <label>New Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>