unpackaged/main/default/objects/FPC_Equipment__c/fields/Original_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original Invoice Received - Status</description>
    <inlineHelpText>Check box if the original invoice has been received.</inlineHelpText>
    <label>Original Invoice</label>
    <type>Checkbox</type>
</CustomField>