unpackaged/main/default/objects/FPC_Equipment__c/fields/Original_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_Amount__c</fullName>
    <description>Amount on the original invoice.</description>
    <inlineHelpText>Type in the amount / cost of equipment on the original invoice.</inlineHelpText>
    <label>Original Invoice Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>