unpackaged/main/default/objects/FPC_Equipment__c/fields/Other_Charge__c.field-meta.xml
<CustomField>
    <fullName>Other_Charge__c</fullName>
    <description>Other charges related to the piece of equipment.</description>
    <inlineHelpText>Type in the cost of other charges related to the equipment.</inlineHelpText>
    <label>Other Charge</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>