unpackaged/main/default/objects/FPC_Equipment__c/fields/Postalcode__c.field-meta.xml
<CustomField>
    <fullName>Postalcode__c</fullName>
    <description>Postal / Zip code where the equipment will be located.</description>
    <inlineHelpText>Type in the Postal / Zip code where the equipment will be located.</inlineHelpText>
    <label>Postalcode</label>
    <length>32</length>
    <type>Text</type>
</CustomField>