unpackaged/main/default/objects/FPC_Equipment__c/fields/Prefunding_Document__c.field-meta.xml
<CustomField>
    <fullName>Prefunding_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will indicate if a prefund agreement is needed for a vendor.</description>
    <inlineHelpText>This box will indicate if a prefund agreement is needed for a vendor.</inlineHelpText>
    <label>Prefunding Document</label>
    <type>Checkbox</type>
</CustomField>