unpackaged/main/default/objects/FPC_Equipment__c/fields/Profile_Req__c.field-meta.xml
<CustomField>
    <fullName>Profile_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Profile Required - Status</description>
    <inlineHelpText>Check box if profile required.</inlineHelpText>
    <label>Profile Req</label>
    <type>Checkbox</type>
</CustomField>