unpackaged/main/default/objects/FPC_Equipment__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <description>Purchase Order Number</description>
    <inlineHelpText>Type in the equipment's purchase order number.</inlineHelpText>
    <label>Purchase Order Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>