unpackaged/main/default/objects/FPC_Equipment__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Equipment Quantity</description>
    <inlineHelpText>Type in th equipment quantity.</inlineHelpText>
    <label>Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>