unpackaged/main/default/objects/FPC_Equipment__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <description>Equipment Sales Tax</description>
    <inlineHelpText>Type in the sales tax for the equipment.</inlineHelpText>
    <label>Sales Tax</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>