unpackaged/main/default/objects/FPC_Equipment__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a piece of equipment has been selected by the customer and will merge the equipment into the documents.</description>
    <inlineHelpText>Check this box if the piece of equipment will be included in the documentation of the transaction.</inlineHelpText>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>