unpackaged/main/default/objects/FPC_Equipment__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Equipment Serial Number</description>
    <inlineHelpText>Type in the equipment's serial number.</inlineHelpText>
    <label>Serial Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>