unpackaged/main/default/objects/FPC_Equipment__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State where the equipment will be located</description>
    <inlineHelpText>Type in the state where the equipment will be located.</inlineHelpText>
    <label>State</label>
    <length>16</length>
    <type>Text</type>
</CustomField>