unpackaged/main/default/objects/FPC_Equipment__c/fields/Stip_1__c.field-meta.xml
<CustomField>
    <fullName>Stip_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stipulation 1 met - status</description>
    <inlineHelpText>Check box if stipulation 1 has been met.</inlineHelpText>
    <label>Stip 1</label>
    <type>Checkbox</type>
</CustomField>