unpackaged/main/default/objects/FPC_Equipment__c/fields/Stip_1_Req__c.field-meta.xml
<CustomField>
    <fullName>Stip_1_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stipulation 1 required - status</description>
    <inlineHelpText>Check box if stipulation 1 is required to be met.</inlineHelpText>
    <label>Stip 1 Req</label>
    <type>Checkbox</type>
</CustomField>