unpackaged/main/default/objects/FPC_Equipment__c/fields/Stip_2__c.field-meta.xml
<CustomField>
    <fullName>Stip_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stipulation 2 met - status</description>
    <inlineHelpText>Check box if stipulation 2 has been met.</inlineHelpText>
    <label>Stip 2</label>
    <type>Checkbox</type>
</CustomField>