unpackaged/main/default/objects/FPC_Equipment__c/fields/Stip_2_Description__c.field-meta.xml
<CustomField>
    <fullName>Stip_2_Description__c</fullName>
    <description>Stipulation 2 description</description>
    <inlineHelpText>Type in a description of stipulation 2.</inlineHelpText>
    <label>Stip 2 Description</label>
    <length>64</length>
    <type>Text</type>
</CustomField>