unpackaged/main/default/objects/FPC_Equipment__c/fields/Taxable_Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Equipment_Cost__c</fullName>
    <description>This field will indicate the taxable equipment cost.</description>
    <inlineHelpText>Type in the taxable equipment cost.</inlineHelpText>
    <label>Taxable Equipment Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>