unpackaged/main/default/objects/FPC_Equipment__c/fields/Title_Work__c.field-meta.xml
<CustomField>
    <fullName>Title_Work__c</fullName>
    <description>Title Work</description>
    <inlineHelpText>Title Work</inlineHelpText>
    <label>Title Work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>