unpackaged/main/default/objects/FPC_Equipment__c/fields/Titled__c.field-meta.xml
<CustomField>
    <fullName>Titled__c</fullName>
    <description>This field will indicate if the equipment being financed is titled.</description>
    <inlineHelpText>This field will indicate if the equipment being financed is titled.</inlineHelpText>
    <label>Titled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>