unpackaged/main/default/objects/FPC_Equipment__c/fields/Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax__c</fullName>
    <description>Total Tax for the equipment.</description>
    <inlineHelpText>Type in the total tax for the equipment.</inlineHelpText>
    <label>Total Tax</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>