unpackaged/main/default/objects/FPC_Equipment__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Equipment unit price</description>
    <inlineHelpText>Type in the unit price of the equipment.</inlineHelpText>
    <label>Unit Price</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>