unpackaged/main/default/objects/FPC_Equipment__c/fields/Utility_Bill__c.field-meta.xml
<CustomField>
    <fullName>Utility_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utility Bill Received - Status</description>
    <inlineHelpText>Check box if a utility bill has been received.</inlineHelpText>
    <label>Utility Bill</label>
    <type>Checkbox</type>
</CustomField>