unpackaged/main/default/objects/FPC_Equipment__c/fields/Utility_Bill_Req__c.field-meta.xml
<CustomField>
    <fullName>Utility_Bill_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utility Bill Required - Status</description>
    <inlineHelpText>Check box if a utility bill is required.</inlineHelpText>
    <label>Utility Bill Req</label>
    <type>Checkbox</type>
</CustomField>