unpackaged/main/default/objects/FPC_Equipment__c/fields/Vehicle_or_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_or_Trailer__c</fullName>
    <description>This field will indicate if a titled piece of equipment is a vehicle or trailer.</description>
    <inlineHelpText>This field will indicate if a titled piece of equipment is a vehicle or trailer.</inlineHelpText>
    <label>Vehicle or Trailer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Titled__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>