unpackaged/main/default/objects/FPC_Equipment__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>Equipment Vendor</description>
    <inlineHelpText>Type in the vendor who is selling the equipment.</inlineHelpText>
    <label>Vendor</label>
    <length>32</length>
    <type>Text</type>
</CustomField>