unpackaged/main/default/objects/FPC_Equipment__c/fields/Vendor_Approval__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vendor Approval Completed - Status</description>
    <inlineHelpText>Check box if vendor approval is completed.</inlineHelpText>
    <label>Vendor Approval</label>
    <type>Checkbox</type>
</CustomField>