unpackaged/main/default/objects/FPC_Equipment__c/fields/Vendor_Checkout_Comments__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Checkout_Comments__c</fullName>
    <description>Vendor checkout comments</description>
    <inlineHelpText>Type in vendor checkout comments.</inlineHelpText>
    <label>Vendor Checkout Comments</label>
    <length>16</length>
    <type>Text</type>
</CustomField>