unpackaged/main/default/objects/FPC_Equipment__c/fields/Vendor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Phone__c</fullName>
    <description>Equipment vendor phone number.</description>
    <inlineHelpText>Type in the vendor's phone number.</inlineHelpText>
    <label>Vendor Phone</label>
    <length>32</length>
    <type>Text</type>
</CustomField>