unpackaged/main/default/objects/FPC_Equipment__c/fields/VendorID__c.field-meta.xml
<CustomField>
    <fullName>VendorID__c</fullName>
    <description>ID for the vendor in a custom object lookup.</description>
    <inlineHelpText>ID for the vendor in a custom object lookup.</inlineHelpText>
    <label>VendorID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>