unpackaged/main/default/objects/FPC_Equipment__c/validationRules/Vendor_Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Phone_Number_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(  
OR(  
LEN (Vendor_Phone__c) = 0,  REGEX( Vendor_Phone__c , "[0-9]{10}"), 
REGEX( Vendor_Phone__c , "[0-9]{3}-[0-9]{3}-[0-9]{4}")  
))</errorConditionFormula>
    <errorDisplayField>Vendor_Phone__c</errorDisplayField>
    <errorMessage>Enter only 10 digits in Vendor Phone  or in the format 999-999-9999</errorMessage>
</ValidationRule>